<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
=======
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

<<<<<<< HEAD

=======
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
<<<<<<< HEAD
        android:text="@string/edittext_uri"

         />



=======
        android:text="@string/edittext_uri" />
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom ="24dp"
        android:text="@string/button_uri"
        android:onClick="openWebsite"/>
=======
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        android:text="@string/button_uri" />
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
<<<<<<< HEAD
        android:text="@string/edittext_uri"
        />
=======
        android:text="@string/edittext_loc" />
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom ="24dp"
        android:text="@string/button_loc"
        android:onClick="openLocation"/>
=======
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        android:text="@string/button_loc" />

>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
<<<<<<< HEAD
        android:text="@string/edittext_share"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="107dp" />
=======
        android:text="@string/edittext_share" />

>>>>>>> 726356909d120437984f0bfb772de451b4420b30
    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom ="24dp"
        android:text="@string/button_share"
        android:onClick="shareText"/>


=======
        android:layout_marginBottom="24dp"
        android:onClick="shareText"
        android:text="@string/button_share"/>
>>>>>>> 726356909d120437984f0bfb772de451b4420b30
</LinearLayout>